# cgv_procedural_plot

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Patch-for-Mesa-driver.diff  README.md  RUNME.bat  RUNME.sh
bib/: references.bib
src/: procedural_plot.cxx
src/glsl/: hallo_world.glfs  procedural_plot.glfs  procedural_plot.glpr
tex/: Makefile  main.aux  main.bbl  main.bcf  main.blg  main.lof  main.lot  main.run.xml  main.tex  main.toc
tex/0_frontmatter/: 0_header.tex  1_title.tex  2_task.tex  4_abstract.tex  5_acronyms.tex
tex/1_mainmatter/: 1_introduction.tex  2_background.tex  3_related_work.tex  4_implementation.tex  4_konzeption.tex  5_implementation.tex  6_results.tex  7_conclusion_and_future_work.tex
